<resources>
    <string name="app_name">Wifi Manager</string>

    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="company_name" translatable="false">alt Lab</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>

    <!-- Ресурсы пунктов меню Action bar'a -->
    <string name="day_mode_button" translatable="false">Дневной режим</string>
    <string name="setting_button" translatable="false">Настройки</string>
    <string name="rq_read_button" translatable="false">Считать QR</string>
    <string name="info_author_button" translatable="false">Об авторе</string>
    <string name="statistic_button" translatable="false">Статистика</string>
    <string name="wifi_spot_button" translatable="false">Точка доступа</string>

    <!-- Ресурсы пунктов меню настроек -->
    <string name="style_button" translatable="false">Стили</string>
    <string name="network_create_param_button">Network param</string>
    <string name="time_table_button" translatable="false">Расписание</string>
    <string name="shareQR" translatable="false">Share with QR</string>
    <string name="showPassword" translatable="false">Show password</string>
    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="connectWithDB" translatable="false">Connect with DB</string>
    <string name="default_lang" translatable="false">default</string>
    <string name="ap_on" translatable="false">Включено</string>
    <string name="ap_off" translatable="false">Выключено</string>
    <string name="pass_len_error" translatable="false">Пароль должен быть минимум из 8 символов!</string>
    <string name="ssid_empty_error" translatable="false">Имя сети не может быть пустым!</string>
    <string name="ip" translatable="false">IpAddr:</string>
    <string name="device">Device:</string>
    <string name="hw_addr" translatable="false">HWAddr:</string>
    <string name="is_reachable" translatable="false">isReachable:</string>
    <string name="devices">Devices</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connect" translatable="false">Подключиться</string>
    <string name="share" translatable="false">Поделиться</string>
    <string name="show_pass" translatable="false">Показать пароль</string>
    <string name="deconnect" translatable="false">Отключиться</string>
    <string name="action">Action</string>
    <string name="in_work" translatable="false">в разработке</string>
    <string name="level" translatable="false">Lvl:</string>
    <string name="fullname">Kormachenko Andrey Andreevich</string>
    <string name="profession" translatable="false">Developer</string>
    <string name="status" translatable="false">Android-разработчик</string>
    <string name="mail" translatable="false">andreysxkormachenko@gmail.com</string>
    <string name="vk_addr" translatable="false">https://vk.com/smart_k_a_a</string>
    <string name="cam_info" translatable="false">Камера нужна для сканирования Qr-кодов!</string>
    <string name="net_added" translatable="false">Сеть добавлена</string>
    <string name="select_lang" translatable="false">Выберите язык</string>
    <string name="user_count">User count</string>
    <string name="signal_level" translatable="false">Level</string>
    <string name="select_param" translatable="false">Выберите параметр</string>
    <string name="day_theme" translatable="false">Светлый</string>
    <string name="night_theme" translatable="false">Темный</string>
    <string name="select_theme" translatable="false">Выберите тему</string>
    <string name="camera">Camera</string>
    <string name="with_pass" translatable="false">Подключиться с паролем</string>
    <string name="show_start_activity">Show start window</string>
    <string name="night_mode_button">Night mode</string>
    <string name="language_button">Language</string>
    <string name="product_info_button">About app</string>
    <string name="db_button">Database</string>
    <string name="reset_setting">Reset setting</string>
    <string name="ap_name">AP name</string>
    <string name="pass">Password</string>
    <string name="Share">Share</string>
    <string name="on_off">On/Off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
