<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:background="@color/background_dark">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="189dp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@drawable/wifi_4_open"
                android:id="@+id/status_img"/>

        <TextView
                android:text="Статус"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stasus_access_point"
                android:textSize="24sp"
                android:textColor="#fff"
                android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_margin="15dp"
            android:id="@+id/linearLayout">

        <TextView
                android:text="@string/ap_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/ssid_access_point"
                android:textColor="#fff"/>

        <TextView
                android:text="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/password_access_point"
                android:textColor="#fff"/>

        <Button
                android:text="@string/on_off"
                android:onClick="powerMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:text="@string/Share"
                android:onClick="share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>